--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
 
     <application
         android:allowBackup="true"
-        android:name=".NavigationDemoApp"
+        android:name=".GameTrail"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationDemo"
+        android:theme="@style/Theme.GameTrail"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
