--- a/core-dependencies.gradle
+++ b/core-dependencies.gradle
@@ -17,4 +17,6 @@ dependencies {
     implementation(libs.androidx.datastore.preferences)
 
     implementation libs.threetenabp
+
+    implementation(libs.appcompat)
 }
