--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,36 @@
 [versions]
-activity-compose = "1.8.0"
-androidx-junit = "1.1.5"
-androidx-material = "1.6.4"
-androidx-navigation-compose = "2.7.7"
-coil-compose = "2.5.0"
-constraintlayout-compose = "1.0.1"
-core-ktx = "1.12.0"
+activity-compose = "1.9.3"
+androidx-junit = "1.2.1"
+androidx-material = "1.7.5"
+androidx-navigation-compose = "2.8.3"
+coil-compose = "2.7.0"
+constraintlayout-compose = "1.1.0"
+core-ktx = "1.13.1"
 core-splashscreen = "1.0.1"
-datastore-preferences = "1.0.0"
-espresso-core = "3.5.1"
+datastore-preferences = "1.1.1"
+espresso-core = "3.6.1"
 gson = "2.10.1"
-hilt-android = "2.49"
-hilt-navigation-compose = "1.1.0"
+hilt-android = "2.51.1"
+hilt-navigation-compose = "1.2.0"
 junit = "4.13.2"
-lifecycle-runtime-ktx = "2.6.2"
-navigation-compose = "2.7.6"
-paging-compose = "3.2.1"
+lifecycle-runtime-ktx = "2.8.7"
+navigation-compose = "2.8.3"
+paging-compose = "3.3.2"
 threetenabp = "1.4.6"
 timber = "5.0.1"
-compose-bom = "2023.10.01"
-ksp = "1.9.20-1.0.14"
-agp = "8.1.2"
-kotlin = "1.9.20"
-appcompat = "1.6.1"
-material = "1.11.0"
-hilt = "2.49"
-serialization = "1.9.0"
+compose-bom = "2024.08.00"
+ksp = "2.0.20-1.0.25"
+agp = "8.4.2"
+kotlin = "2.0.20"
+appcompat = "1.7.0"
+material = "1.12.0"
+hilt = "2.51.1"
+serialization = "2.0.20"
 room-version = "2.6.1"
-okhttp = "4.11.0"
-retrofit = "2.9.0"
+okhttp = "4.12.0"
+retrofit = "2.11.0"
 chucker = "4.0.0"
-material3-android = "1.2.1"
+material3-android = "1.3.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
@@ -75,6 +75,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 chucker = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
 chucker-library-no-op = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chucker" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3-android" }
 
 [plugins]
@@ -84,6 +85,7 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 pluginSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serialization" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 
 
